test/cases/redundant_comptime.0.zig
pub fn main() void {
    var a: comptime u32 = 0;
}

// error
//
// :2:12: error: redundant comptime keyword in already comptime scope
